css/main.css
@import url(http://fonts.googleapis.com/css?family=Lato&v2);
@import url(http://fonts.googleapis.com/css?family=Inconsolata&v2);

body {
  width: 800px;
  margin: auto;
  background-color: #ffffff;
  font-family: 'Lato', arial, serif;
  font-size: 12pt;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.2em;
  font-size: 20pt;
  color: #003366;
  margin-top: 3.0em;
  margin-bottom: 1.2em;
  page-break-after: avoid;
  border-bottom: 1px dotted gray;
  font-family: 'Lato', arial, serif;
}

h2 {
  line-height: 1.2em;
  font-size: 18pt;
  color: #003366;
  margin-top: 2.0em;
  margin-bottom: 1.2em;
  page-break-after: avoid;
  border-bottom: 1px dotted gray;
  font-family: 'Lato', arial, serif;
}

h3 {
  line-height: 1.2em;
  font-size: 16pt;
  color: #003366;
  margin-top: 1.5em;
  margin-bottom: 1.2em;
  page-break-after: avoid;
  border-bottom: 1px dotted gray;
  font-family: 'Lato', arial, serif;
}

h4 {
  line-height: 1.2em;
  font-size: 14pt;
  color: #003366;
  margin-top: 1.0em;
  margin-bottom: 1.2em;
  page-break-after: avoid;
  border-bottom: 1px dotted gray;
  font-family: 'Lato', arial, serif;
}

p, pre, blockquote, table, ul, ol, dl {
  margin-top: 1em;
  margin-bottom: 1em;
  font-size: 10pt;
  width: 85%;
}

p {
  text-align: justify;
}

ul ul, ul ol, ol ol, ol ul {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

li {
  margin: 0.3em auto;
}

ul {
  margin-left: 15px;
  padding-left: 15px;
  list-style-type: square;
}

ol {
  margin-left: 15px;
  padding-left: 15px;
}

dt {
  font-weight: bold;
}

img {
  border: none;
}

blockquote {
  padding: 0.4em;
  background-color: #f6f5eb;
}

th, td {
  background-color: #f0f0f0;
}

th {
  background-color: #ccc;
}

hr {
  border: none;
  border-top: 1px solid #ccc;
  width: 600px;
}

del {
  text-decoration: line-through;
  color: #777777;
}

.todo {
  font-weight: bold;
  background-color: #f0ece8;
  color: #a03020;
}

.justleft {
  text-align: left;
}

.justright {
  text-align: right;
}

.justcenter {
  text-align: center;
}

.center {
  margin-left: auto;
  margin-right: auto;
}

.contact {
  font-family: 'Lato', arial, serif;
  font-size: 10pt;
}

.highlight {
  font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;
  background: #EEEEEE;
  border: 1px solid #ccc;
  padding-left: 5px;
  padding-right: 5px;
  overflow-x: auto;
  overflow-y: hidden;
}

a:not(.title) {
  border-radius: 0.5em 0.5em 0.5em 0.5em;
  -moz-border-radius: 2px 2px 2px 2px;
  background-color: #EAEAEA;
  border: 0 solid #4488AA;
  padding: 1px 6px 2px;
  text-decoration: none;
  font-size: 12px;
  color: #333333;
}

a:hover {
  background: none repeat scroll 0 0 #ff6900;
  color: white;
}

a[href^="http://"] {
  padding-right: 17px;
  background-image: url('/img/external.png');
  background-repeat: no-repeat;
  background-position: right;
}

a:hover[href^="http://"] {
  padding-right: 17px;
  background-color: #ff6900;
  background-image: url('/img/external.png');
  background-repeat: no-repeat;
  background-position: right;
}

a[href^="https://"] {
  padding-right: 17px;
  background-image: url('/img/external.png');
  background-repeat: no-repeat;
  background-position: right;
}

a:hover[href^="https://"] {
  padding-right: 17px;
  background-color: #ff6900;
  background-image: url('/img/external.png');
  background-repeat: no-repeat;
  background-position: right;
}
 
/* toc */
.toc {
  border: 1px solid #ccc;
  background: #f8f8f8;
  float: right;
  padding: 3px;
  position: fixed;
  top: 4em;
  right: 1em;
  z-index: 1;
  -moz-opacity: .2;
  opacity: .2;
  -ms-filter: "opacity=20";
  filter: alpha(opacity=20);
  width: 250px;
  height: 180px;
  overflow: auto;
}

.toc li {
  list-style-type: square;
  font-size: .9em;
  line-height: 22px;
}

.toc ul {
  margin: 0;
}

.toc:hover {
  -moz-opacity: 1;
  opacity: 1;
  -ms-filter: "enabled=false";
  filter: alpha(enabled=false);
}

.meta {
  color: #ff6900;
  font-weight: bold;
  margin-top: -1.2em;
}

/* to avoid splitted tables by pdf generation with wkhtmltopdf */
table, td, tr {
  page-break-inside: avoid;
}

